--- a/src/content/rulebook/sample.mdx
+++ b/src/content/rulebook/sample.mdx
@@ -1,32 +1,36 @@
 ---
-title: "サンプルルールページ"
-description: "目次表示のテスト用ページです。"
+title: "サンプルルールブックページ"
+description: "これはサンプルルールブックページです。"
 pubDate: "2025-09-24"
 showToc: true
 ---
 
-# サンプルルールページ
+import Callout from '../../components/Callout.tsx';
 
-## はじめに
+# サンプルページ
 
-これはサンプルのルールページです。目次が正しく表示されるか確認します。
+これはMDX形式のサンプルページです。ここにルールブックのコンテンツを記述します。
 
-### セクション1.1
+## セクション1
 
-最初のサブセクションです。
+通常のMarkdownコンテンツ。
 
-#### サブセクション1.1.1
+<Callout type="info">
+  これは情報メッセージです。
+</Callout>
 
-さらに深い階層のサブセクションです。
+### サブセクション
 
-## 主要なルール
+さらに詳細な情報。
 
-ここでは主要なルールについて説明します。
+<Callout type="warning">
+  これは警告メッセージです。
+</Callout>
 
-### セクション2.1
+## セクション2
 
-別のサブセクションです。
+別のセクション。
 
-## まとめ
-
-このページは目次機能のテストのために作成されました。
+<Callout type="error">
+  これはエラーメッセージです。
+</Callout>
